# llm_service

./: .gitignore  Dockerfile  LICENSE  MODULE.bazel  README.md  requirements.txt
app/: BUILD  config.py  main.py  models.py  monitoring.py  schemas.py
tests/: test_api.py
